--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "clsx": "^2.1.1",
     "cors": "^2.8.6",
     "dotenv": "^16.4.7",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.563.0",
     "pg": "^8.13.1",
     "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
